--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Lab_2!</title>
+        <title>Lab_2</title>
         <meta charset="UTF-8">
         
         <figure>
