--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Lab_2</title>
+        <title>Lab_2!</title>
         <meta charset="UTF-8">
         </head>
           
     <body>
-        <style>
+        <style scoped>
             aside {
                 width: 30%;
                 padding-left: 15px;
@@ -103,7 +103,7 @@
             <br><h2>Thoughts</h2>     
                 <div>    
                     <span>
-                        <p><i>Cow<br>Sheep<br>Dog</i></p>
+                        <i>Cow<br>Sheep<br>Dog</i>
                         </span>
                     <ul>
                         <li>Coffee</li>
